--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nuxtjs/svg-sprite": "^0.2.0",
     "@nuxtjs/toast": "^3.2.0",
     "@nuxtjs/vuetify": "^0.5.5",
+    "atob": "^2.1.2",
     "chart.js": "^2.7.3",
     "cookie": "^0.3.1",
     "cookie-parser": "^1.4.3",
@@ -34,6 +35,7 @@
     "echarts": "^4.1.0",
     "element-ui": "^2.4.6",
     "intersection-observer": "^0.5.1",
+    "js-yaml": "^3.13.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
     "lodash-es": "^4.17.11",
@@ -47,6 +49,7 @@
     "nuxt-validate": "^0.1.3",
     "nuxt-webfontloader": "^1.0.0",
     "swiper": "^4.4.2",
+    "tar": "^4.4.8",
     "uuid": "^3.3.2",
     "v-charts": "^1.19.0",
     "v-click-outside-x": "^3.5.6",
@@ -83,7 +86,7 @@
     "autoprefixer": "^9.4.4",
     "moment-locales-webpack-plugin": "^1.0.7",
     "node-sass": "^4.11.0",
-    "nodemon": "^1.11.0",
+    "nodemon": "^1.19.0",
     "postcss-gap-properties": "^2.0.0",
     "sass-loader": "^7.1.0"
   }
